--- a/assets/css/build.css
+++ b/assets/css/build.css
@@ -1,9 +1,6 @@
-.something {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
+body table:nth-child(4) tbody tr td table {
+  padding: 1em;
 }
-
-.wow {
-  font-size: 16px;
+body table:nth-child(5) {
+  background: red;
 }
