--- a/assets/scss/custom/components/_globals.scss
+++ b/assets/scss/custom/components/_globals.scss
@@ -4,3 +4,20 @@
     font-family: 'Source Sans Pro', sans-serif !important;
     font-size: 16px;
 }
+
+/* unvisited link */
+a {
+    &:link {
+        color: #449406;
+    }
+
+    /* visited link */
+    &:visited {
+        color: #1e6900;
+    }
+
+    /* mouse over link */
+    &:hover {
+        color: #7edf00;
+    }
+}
