--- a/assets/css/build.css
+++ b/assets/css/build.css
@@ -26,12 +26,18 @@ a:hover {
 .sidebar {
   padding: 1em 2em;
 }
+.sidebar__main b {
+  margin-bottom: 0.4em;
+}
 :not(.sidebar__main) a {
   font-size: 20px;
   display: -webkit-inline-box;
   display: -ms-inline-flexbox;
   display: inline-flex;
   margin-bottom: 0.4em;
+}
+:not(.sidebar__main) a:first-child {
+  margin-top: 0.4em;
 }
 :not(.sidebar__main) a svg {
   width: 0.8em;
